vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_block.out
vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_block.vv:3:3: error: expression evaluated but not used
    1 | fn main() {
    2 |     {
    3 |         $embed_file(@FILE)
      |         ~~~~~~~~~~~~~~~~~~
    4 |     }
    5 | }
